next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk, 6.1-dev, future 6.2): 
-------------------------------------------------

- Initialize the scalebar image color to transparent by default (#3957)

IMPORTANT SECURITY FIX:

-  Fixes to prevent SQL injections through OGC filter encoding (in WMS, WFS 
   and SOS), as well as a potential SQL injection in WMS time support. 
   Your system may be vulnerable if it has MapServer with OGC protocols 
   enabled, with layers connecting to an SQL RDBMS backend, either 
   natively or via OGR (#3903)

- Fix performance issue with Oracle and scrollable cursors (#3905)

- Fix attribute binding for layer styles (#3941)

- Added missing fclose() when writing query files (#3943)

- Fix double-free in msAddImageSymbol() when filename is a http resource (#3939)

- Fix rendering of lines with outlinewidth set if not on first style (#3935)

- Correct SLD with spatial filters bbox and intersects (#3929)

- Applied patch for ticket (symbol writing issues) (#3589)

- Added WMS GetFeatureInfo Cascading (#3764)

- Fixed png lib is not found on multiarch systems (#3921)

- Fixed PHP MapScript opacity property of StyleObj no longer works (#3920)

- Fixed Using STYLEITEM AUTO, loadExpression fails when the label text
  contains a space or begins with a double quote (#3481)

- Fix for the cluster processing if the shape bounds doesn't overlap 
  with the given extent (#3913)

- Union layer 3 new processing options added (#3900)

- Changed msRemoveStyle to allow removing all styles (#3895)

- Fixed mssql2008 to return correct geometries with chart layer type (#3894)

- Ensure msLayerSetProcessingKey() supports setting a NULL value to clear
  a processing key. 

- Write SYMBOLSET/END tags when saving a symbol file (#3885)
